objects/Email_Config_Settings__c.object
<CustomObject>
    <fields>
        <fullName>Available_For_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCC__c</fullName>
        <description>This field can hold either a group name/user name, sets of records from different objects as bcc recipient(s) of an email.</description>
        <label>BCC</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CC__c</fullName>
        <description>This field can hold either a group name/user name, sets of records from different objects as to be kept as cc recipient(s) of an email.</description>
        <label>CC</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Jobviewer_Type__c</fullName>
        <description>If its value is MEBES then send email to Customer MEBES Jobviewer
If its value is GDSOUT Review then send email to Customer GDSOUT Jobviewer
If its value is Frame Mockup then send email to Customer Frame Mockup Reviewer.</description>
        <label>Customer Jobviewer Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MEBES Jobview</fullName>
                </value>
                <value>
                    <fullName>Prime GDSOUT Review</fullName>
                </value>
                <value>
                    <fullName>Frame Mockup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Template_Name__c</fullName>
        <label>Email Template Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foundry_Jobviewer_Type__c</fullName>
        <description>If its value is MEBES then send email to Customer MEBES Jobviewer 
If its value is GDSOUT Review then send email to Customer GDSOUT Jobviewer 
If its value is Frame Mockup then send email to Customer Frame Mockup Reviewer.</description>
        <label>Foundry Jobviewer Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MEBES Jobview</fullName>
                </value>
                <value>
                    <fullName>Prime GDSOUT Review</fullName>
                </value>
                <value>
                    <fullName>Frame Mockup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gating_Jobview__c</fullName>
        <description>It is a status for MEBES etc. Need more clarification.</description>
        <label>Gating Jobview</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <default>true</default>
                    <label>NA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MPW_PTRF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If its value is True means PTRF’s MST should starts with ‘MPW’/If its value is false means it doesnot takes the consideration of PTRF’s MaskSetTitle</description>
        <label>MPW PTRF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Mail_To_Customer_AS_Submitter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If its value is T means should send the email to Customer who is a submitter else not.</description>
        <label>Send Mail To Submitter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Mail_To_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Mail To Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TO__c</fullName>
        <description>This field can hold either a group name/user name, sets of records from different objects as main recipient of an email.</description>
        <label>TO</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tech_Geo_Value__c</fullName>
        <description>Based on the value selected, different recipients would get the email template.</description>
        <label>Tech Geo Value (UM)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0.007</fullName>
                </value>
                <value>
                    <fullName>0.010</fullName>
                </value>
                <value>
                    <fullName>0.014</fullName>
                </value>
                <value>
                    <fullName>0.020</fullName>
                </value>
                <value>
                    <fullName>0.022</fullName>
                </value>
                <value>
                    <fullName>0.028</fullName>
                </value>
                <value>
                    <fullName>0.032</fullName>
                </value>
                <value>
                    <fullName>0.040</fullName>
                </value>
                <value>
                    <fullName>0.045</fullName>
                </value>
                <value>
                    <fullName>0.055</fullName>
                </value>
                <value>
                    <fullName>0.060</fullName>
                </value>
                <value>
                    <fullName>0.065</fullName>
                </value>
                <value>
                    <fullName>0.086</fullName>
                </value>
                <value>
                    <fullName>0.08</fullName>
                </value>
                <value>
                    <fullName>0.09</fullName>
                </value>
                <value>
                    <fullName>0.11</fullName>
                </value>
                <value>
                    <fullName>0.13</fullName>
                </value>
                <value>
                    <fullName>0.14</fullName>
                </value>
                <value>
                    <fullName>0.152</fullName>
                </value>
                <value>
                    <fullName>0.153</fullName>
                </value>
                <value>
                    <fullName>0.15</fullName>
                </value>
                <value>
                    <fullName>0.16</fullName>
                </value>
                <value>
                    <fullName>0.17</fullName>
                </value>
                <value>
                    <fullName>0.18</fullName>
                </value>
                <value>
                    <fullName>0.20</fullName>
                </value>
                <value>
                    <fullName>0.22</fullName>
                </value>
                <value>
                    <fullName>0.25</fullName>
                </value>
                <value>
                    <fullName>0.30</fullName>
                </value>
                <value>
                    <fullName>0.32</fullName>
                </value>
                <value>
                    <fullName>0.35</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Email Config Settings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Email_Template_Name__c</columns>
        <columns>TO__c</columns>
        <columns>BCC__c</columns>
        <columns>Available_For_Use__c</columns>
        <columns>MPW_PTRF__c</columns>
        <columns>Tech_Geo_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MPW_22nm</fullName>
        <booleanFilter>1 AND 2 and 3</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Email_Template_Name__c</columns>
        <columns>TO__c</columns>
        <columns>BCC__c</columns>
        <columns>Available_For_Use__c</columns>
        <columns>MPW_PTRF__c</columns>
        <columns>Tech_Geo_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tech_Geo_Value__c</field>
            <operation>includes</operation>
            <value>0.022</value>
        </filters>
        <filters>
            <field>MPW_PTRF__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Available_For_Use__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>MPW_22nm_active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MPW_WRITE</fullName>
        <columns>NAME</columns>
        <columns>Available_For_Use__c</columns>
        <columns>BCC__c</columns>
        <columns>CC__c</columns>
        <columns>Customer_Jobviewer_Type__c</columns>
        <columns>Email_Template_Name__c</columns>
        <columns>Foundry_Jobviewer_Type__c</columns>
        <columns>Gating_Jobview__c</columns>
        <columns>MPW_PTRF__c</columns>
        <columns>Send_Mail_To_Customer__c</columns>
        <columns>Send_Mail_To_Customer_AS_Submitter__c</columns>
        <columns>Tech_Geo_Value__c</columns>
        <columns>TO__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MPW_PTRF__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Email_Template_Name__c</field>
            <operation>contains</operation>
            <value>write</value>
        </filters>
        <label>MPW WRITE</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Per_PTRF</fullName>
        <columns>NAME</columns>
        <columns>Email_Template_Name__c</columns>
        <columns>Available_For_Use__c</columns>
        <columns>Tech_Geo_Value__c</columns>
        <columns>MPW_PTRF__c</columns>
        <columns>Gating_Jobview__c</columns>
        <columns>Customer_Jobviewer_Type__c</columns>
        <columns>Foundry_Jobviewer_Type__c</columns>
        <columns>TO__c</columns>
        <columns>CC__c</columns>
        <columns>BCC__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Email_Config_Settings__c.PTRF</value>
        </filters>
        <filters>
            <field>Available_For_Use__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Per PTRF</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Swift_Device_GlobalShuttle_MEBES_is_Rele</fullName>
        <columns>NAME</columns>
        <columns>Email_Template_Name__c</columns>
        <columns>Available_For_Use__c</columns>
        <columns>TO__c</columns>
        <columns>BCC__c</columns>
        <columns>CC__c</columns>
        <columns>Customer_Jobviewer_Type__c</columns>
        <columns>Foundry_Jobviewer_Type__c</columns>
        <columns>Gating_Jobview__c</columns>
        <columns>MPW_PTRF__c</columns>
        <columns>Send_Mail_To_Customer__c</columns>
        <columns>Send_Mail_To_Customer_AS_Submitter__c</columns>
        <columns>Tech_Geo_Value__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Email_Template_Name__c</field>
            <operation>equals</operation>
            <value>Swift_InProgress_Mask_Layer_For_Shipped_Mask_WIP</value>
        </filters>
        <label>Swift_InProgress_Mask_Layer_For_Shipped_</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Swift_Filter</fullName>
        <booleanFilter>(1 or 2 or 3) and 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Email_Template_Name__c</columns>
        <columns>TO__c</columns>
        <columns>Tech_Geo_Value__c</columns>
        <columns>BCC__c</columns>
        <columns>Available_For_Use__c</columns>
        <columns>Gating_Jobview__c</columns>
        <columns>MPW_PTRF__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Email_Template_Name__c</field>
            <operation>equals</operation>
            <value>SWIFT_Customer_Frame_Mockup_Ready_Email</value>
        </filters>
        <filters>
            <field>Email_Template_Name__c</field>
            <operation>equals</operation>
            <value>SWIFT_Foundry_Frame_Mockup_Ready_Email</value>
        </filters>
        <filters>
            <field>Email_Template_Name__c</field>
            <operation>equals</operation>
            <value>Swift_Device_Frame_Mockup_is_Approved_Custom</value>
        </filters>
        <filters>
            <field>Tech_Geo_Value__c</field>
            <operation>equals</operation>
            <value>0.022</value>
        </filters>
        <label>Swift Filter</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ECS-{0000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Config Settings</pluralLabel>
    <recordTypes>
        <fullName>General</fullName>
        <active>true</active>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>MST</fullName>
        <active>true</active>
        <description>When the email is being sent for data under single MST.</description>
        <label>MST</label>
    </recordTypes>
    <recordTypes>
        <fullName>MST_No_Mask_Layers</fullName>
        <active>true</active>
        <description>Where email is being sent upon finding no layer in MRS.</description>
        <label>MST-No Mask Layers</label>
    </recordTypes>
    <recordTypes>
        <fullName>Maskshop</fullName>
        <active>true</active>
        <description>Where email is being sent per Maskshop.</description>
        <label>Maskshop</label>
    </recordTypes>
    <recordTypes>
        <fullName>PTRF</fullName>
        <active>true</active>
        <description>When the email is being sent per PTRF basis on updating the layer-chip records from integration and UI.</description>
        <label>PTRF</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>